--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "relmsg/message": "^0.9"
     },
     "autoload": {
         "psr-4": {
