Install http libraries

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,14 @@
     ],
     "require": {
         "php": "^7.4",
-        "relmsg/message": "^0.9"
+        "relmsg/message": "^0.9",
+        "psr/http-message": "^1.0",
+        "psr/http-client": "^1.0",
+        "psr/http-factory": "^1.0"
+    },
+    "require-dev": {
+        "symfony/http-client": "^5.0",
+        "nyholm/psr7": "^1.2"
     },
     "autoload": {
         "psr-4": {
