--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "relmsg/message": "^0.9",
         "psr/http-message": "^1.0",
         "psr/http-client": "^1.0",
-        "psr/http-factory": "^1.0"
+        "psr/http-factory": "^1.0",
+        "psr/event-dispatcher": "^1.0",
+        "psr/log": "^1.1"
     },
     "require-dev": {
         "symfony/http-client": "^5.0",
