--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "psr/log": "^1.1"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.1",
         "symfony/http-client": "^5.0",
         "nyholm/psr7": "^1.2"
     },
