--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
         "psr/event-dispatcher": "^1.0",
-        "psr/log": "^1.1"
+        "psr/log": "^1.1",
+        "symfony/service-contracts": "^1.0|^2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.1",
