--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "psr/http-factory": "^1.0",
         "psr/event-dispatcher": "^1.0",
         "psr/log": "^1.1",
-        "symfony/service-contracts": "^1.0|^2"
+        "symfony/service-contracts": "^1.0|^2",
+        "doctrine/collections": "^1.6",
+        "doctrine/annotations": "^1.10"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.1",
