--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,10 @@
         "psr/log": "^1.1",
 
         "doctrine/collections": "^1.6",
-        "doctrine/annotations": "^1.10"
+        "doctrine/annotations": "^1.10",
+
+        "symfony/config": "^4.4|^5.0",
+        "symfony/yaml": "^4.4|^5.0"
     },
     "require-dev": {
         "symfony/http-client": "^5.0",
