--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
 
         "doctrine/collections": "^1.6",
         "doctrine/annotations": "^1.10",
+        "elao/enum": "^1.8",
 
         "symfony/config": "^4.4|^5.0",
         "symfony/yaml": "^4.4|^5.0"
