--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,6 @@
         "psr/http-message": "^1.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
-        "psr/event-dispatcher": "^1.0",
         "psr/log": "^1.1",
 
         "doctrine/collections": "^1.6",
@@ -39,7 +38,8 @@
         "elao/enum": "^1.8",
 
         "symfony/config": "^4.4|^5.0",
-        "symfony/yaml": "^4.4|^5.0"
+        "symfony/yaml": "^4.4|^5.0",
+        "symfony/event-dispatcher-contracts": "^2.1"
     },
     "require-dev": {
         "symfony/http-client": "^5.0",
