--- a/composer.json
+++ b/composer.json
@@ -45,9 +45,7 @@
         "symfony/http-client": "^5.0",
         "nyholm/psr7": "^1.2",
 
-        "phpunit/phpunit": "^9.1",
-
-        "vimeo/psalm": "^3.11"
+        "phpunit/phpunit": "^9.1"
     },
     "config": {
         "sort-packages": false
