Add lint commands to composer scripts

--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,8 @@
         "sort-packages": false
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "phpunit",
+        "lint": "php-cs-fixer fix --show-progress=dots",
+        "lint:ci": "php-cs-fixer fix --dry-run -v --show-progress=dots --diff-format=udiff"
     }
 }
