Add cs fixer into GitHub test workflow

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -45,3 +45,6 @@ jobs:
 
       - name: Run test suite
         run: composer run-script test
+
+      - name: PHP CS Fixer
+        run: composer run-script lint:ci
