--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -46,5 +46,10 @@ jobs:
       - name: Run test suite
         run: composer run-script test
 
+      - uses: actions/upload-artifact@v1
+        with:
+          name: Coverage report
+          path: coverage
+
       - name: PHP CS Fixer
         run: composer run-script lint:ci
