--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,9 @@
         "doctrine/annotations": "^1.10",
         "elao/enum": "^1.8",
 
-        "symfony/config": "^4.4|^5.0",
-        "symfony/yaml": "^4.4|^5.0",
-        "symfony/event-dispatcher": "^4.4|^5.0"
+        "symfony/config": "^5.0",
+        "symfony/yaml": "^5.0",
+        "symfony/event-dispatcher": "^5.0"
     },
     "require-dev": {
         "symfony/http-client": "^5.0",
