Move symfony/event-dispatcher from dependencies

--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,11 @@
         "elao/enum": "^1.8",
 
         "symfony/config": "^5.0",
-        "symfony/yaml": "^5.0",
-        "symfony/event-dispatcher": "^5.0"
+        "symfony/yaml": "^5.0"
     },
     "require-dev": {
         "symfony/http-client": "^5.0",
+        "symfony/event-dispatcher": "^5.0",
         "nyholm/psr7": "^1.2",
 
         "phpunit/phpunit": "^9.1",
