--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.1/phpunit.xsd"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.5/phpunit.xsd"
          bootstrap="vendor/autoload.php"
          executionOrder="depends,defects"
-         backupGlobals="false"
          colors="true"
-         verbose="true"
->
+         verbose="true">
     <testsuites>
         <testsuite name="default">
-            <directory suffix="Test.php">tests</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
-    <filter>
-        <whitelist processUncoveredFilesFromWhitelist="true">
+    <coverage processUncoveredFiles="true">
+        <include>
             <directory suffix=".php">src</directory>
-        </whitelist>
-    </filter>
-
-    <logging>
-        <log type="coverage-text" target="php://stdout"/>
-        <log type="coverage-clover" target="coverage/clover.xml"/>
-        <log type="coverage-html" target="coverage/report" />
-    </logging>
+        </include>
+        <report>
+            <text outputFile="php://stdout" />
+            <clover outputFile="coverage/clover.xml" />
+            <html outputDirectory="coverage/report" />
+        </report>
+    </coverage>
 </phpunit>
