--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,13 @@
 {
-    "name": "relmsg/client",
-    "description": "A Relations Messenger Client",
+    "name": "remessage/client",
+    "description": "PHP client for Re Message",
     "type": "library",
     "license": "Apache-2.0",
-    "homepage": "https://dev.relmsg.ru/packages/client",
+    "homepage": "https://dev.remessage.ru/packages/client",
     "authors": [
         {
             "name": "Oleg Kozlov",
-            "email": "h1karo@relmsg.ru",
-            "homepage": "https://rel.ms/h1karo",
+            "email": "h1karo@remessage.ru",
             "role": "Developer"
         }
     ],
@@ -26,7 +25,7 @@
         "php": ">=8.1",
         "ext-mbstring": "*",
 
-        "relmsg/message": "^2.0.0",
+        "remessage/message": "^2.2.0",
 
         "psr/http-message": "^1.0",
         "psr/http-client": "^1.0",
